--- a/src/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
+++ b/src/TravelRequests.Infrastructure/TravelRequests.Infrastructure.csproj
@@ -2,9 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TravelRequests.Domain\TravelRequests.Domain.csproj" />
+    <ProjectReference Include="..\TravelRequests.Application\TravelRequests.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
